--- a/index.html
+++ b/index.html
@@ -1,23 +1,56 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-Welcome to my site!
+  <title>My first site</title>
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 
-<!-- image of a duck -->
+</head>
+<body>
 
-I am currently learning to code with Code First Girls. Going over everything from how the 
-internet works, to creating websites and version control with git. A lot to cover in only 8 weeks!
-Everyone should learn to code, here are some pretty good reasons why...
+  <div>
+  <h1>Hello World</h1>
 
-HTML is cool
-CSS is cooler
-JS is the best
+  <h2>Welcome to my site!</h2>
 
-What do you need to create a website?
+  <!-- image of a duck -->
+  <img src="duck.jpg" width="200px">
+  </div>
 
-Not much!
-A computer (always a good start)
-A text editor (I am using atom)
-A web browser (I am using chrome)
-Some HTML, CSS and JS files
+  <div>
+  <p>
+    I am currently learning to code with <a href="www.codefirstgirls.org.uk">Code First Girls</a>. Going over everything from how the
+    internet works, to creating websites and version control with git. A lot to cover in only 8 weeks!
+    Everyone should learn to code, here are some pretty good reasons why...
+    <ol>
+      <li>HTML is super cool</li>
+      <li id="lower">CSS is even cooler</li>
+      <li id="lowest">JS is the best</li>
+    </ol>
+  </p>
+</div>
 
-Follow my progress on github
+<div class="contrast">
+  <h2><em>What do you need to create a website?</em></h2>
+
+  <p>
+    Not much!
+    <ul>
+      <li>A computer (always a good start)</li>
+      <li>A text editor (I am using atom)</li>
+      <li>A web browser (I am using chrome)</li>
+      <li>Some HTML, CSS and JS files</li>
+    </ul>
+  </p>
+  </div>
+
+  <br>
+
+  <p>
+    Follow my progress on <a href="www.github.com">github</a>
+  </p>
+</body>
+</html>
